--- a/style.css
+++ b/style.css
@@ -1,102 +1,209 @@
 body {
   background-color: #222222;
+  line-height: 1.5em;
 }
 
 #container {
   display: grid; 
-  margin: 150px auto 0 auto;
-  width: 300px;
+  margin: 2vh auto 0 auto;
+  width: 100vh;
+  height: 95vh;
   text-align: center;
   grid-template-columns: repeat(3, 1fr);
 }
 
 #homescreen {
-  margin-top: 100px;
-  width: 300px;
-  height: 100px;
-  font-size: 2em;
-  background-color: #111111;
+  display: inherit;
+  width: inherit;
+  height: inherit;
+  grid-template-rows: repeat(4, 1fr);
+}
+
+#logo {
+  margin: 20vh auto 0 auto;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 14vh;
+  font-weight: bolder;
+  text-align: center;
+  color: #222222;
+  opacity: 0.7;
+  transition: 3.5s;
+}
+
+#author {
+  margin: 55vh auto 0 auto;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 4vh;
+  text-align: center;
+  color: #222222;
+  opacity: 0.2;
+  transition: 5.5s;
+}
+
+#one-player,
+#two-player,
+#login,
+#reset,
+#logout {
+  position: fixed;
+  height: 18vh;
+  width: inherit;
+  border: 4px dotted burlywood;
+  border-radius: 5vh 5vh 10vh 10vh;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 8vh;
+  opacity: 0.7;
+  cursor: pointer;
+  /* transition: 250ms; */
+}
+
+#one-player,
+#two-player {
+  visibility: hidden;
+  transition: 250ms;
+}
+
+#one-player {
+  margin: 35vh auto 0 auto;
+  border-bottom: none;
+  z-index: 1;
+}
+
+#two-player {
+  margin: 51vh auto 0 auto;
+  border-top: none;
+  z-index: 0;
+}
+
+#login {
+  margin: 70vh auto 0 auto;
+  background: none;
+  border-color: #111111;
+  color: burlywood;
+}
+
+#reset {
+  margin: 35vh auto 0 auto;
+  border-bottom: none;
+  z-index: 3;
+}
+
+#logout {
+  margin: 51vh auto 0 auto;
+  border-top: none;
+  z-index: 2;
+}
+
+#login-one,
+#login-two {
+  position: fixed;
+  height: 24vh;
+  width: 90vh;
+  padding: 0 5vh;
+  background: none;
+  border: none;
+  border-bottom: 4px dotted burlywood;
+  border-radius: 8.5vh 8.5vh 15vh 15vh;
+  font-size: 10vh;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-align: center;
   color: blanchedalmond;
-  opacity: 0.5;
-  transition: 2s;
+  transition: 250ms;
+}
+
+#login-one:focus,
+#login-two:focus {
+  padding: 0;
+  padding-left: 10vh;
+  border-bottom: 4px dotted #111111;
+  border-radius: 15vh 8vh;
+  text-align: left;
+  background-color: blanchedalmond;
+  color: #222222;
+}
+
+#login-one { margin: 5vh auto 0 auto; }
+
+#login-two { margin: 35vh auto 0 auto; }
+
+ #message {
+  position: fixed;
+  margin: 20vh auto 0 auto;
+  width: inherit;
+  height: inherit;
+  background: none;
+  color: #222222;
+  font-size: 7vh;
+  font-weight: bolder;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  transition: 3s;
+}
+
+#end {
+  position: fixed;
+  display: grid;
+  margin: 0 auto;
+  width: inherit;
+  height: inherit;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bolder;
+  text-align: center;
+  transition: 1.5s;
 }
 
 [id^='cell-'] {
   background: none;
+  background-color: #222222;
   color: inherit;
-  border: none;
+  border: 1px dotted burlywood;
   padding: 0;
   font: inherit;
   cursor: pointer;
   outline: inherit;
-  width: 100px;
-  height: 100px;
+  width: 33vh;
+  height: 31.5vh;
   margin: 0 auto;
-  font-size: 75px;
-  color: burlywood;
+  font-size: 24.25vh;
+  color: blanchedalmond;
   font-weight: bolder;
-  line-height: 1.5em;
-  background-color: #222222;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 #cell-0x0 {
-  border-right: 1px solid blanchedalmond;
-  border-bottom: 1px solid blanchedalmond;
+  border-left: none;
+  border-top: none;
 }
 
-#cell-0x1 {
-  border-left: 1px solid blanchedalmond;
-  border-right: 1px solid blanchedalmond;
-  border-bottom: 1px solid blanchedalmond;
-}
+#cell-0x1 { border-top: none; }
 
 #cell-0x2 {
-  border-left: 1px solid blanchedalmond;
-  border-bottom: 1px solid blanchedalmond;
+  border-right: none;
+  border-top: none;
 }
 
-#cell-1x0 {
-  border-top: 1px solid blanchedalmond;
-  border-right: 1px solid blanchedalmond;
-  border-bottom: 1px solid blanchedalmond;
-}
+#cell-1x0 { border-left: none; }
 
-#cell-1x1 {
-  border: 1px solid blanchedalmond;
-}
+/* cell-1x1 predefined */
 
-#cell-1x2 {
-  border-top: 1px solid blanchedalmond;
-  border-left: 1px solid blanchedalmond;
-  border-bottom: 1px solid blanchedalmond;
-}
+#cell-1x2 { border-right: none; }
 
 #cell-2x0 {
-  border-top: 1px solid blanchedalmond;
-  border-right: 1px solid blanchedalmond;
+  border-bottom: none;
+  border-left: none;
 }
 
-#cell-2x1 {
-  border-top: 1px solid blanchedalmond;
-  border-left: 1px solid blanchedalmond;
-  border-right: 1px solid blanchedalmond;
-}
+#cell-2x1 { border-bottom: none; }
 
 #cell-2x2 {
-  border-top: 1px solid blanchedalmond;
-  border-left: 1px solid blanchedalmond;
-}
-
-.hover {
-  color: burlywood;
+  border-bottom: none;
+  border-right: none;
 }
 
 .blink {
   background-color: burlywood;
   border-color: #222222;
   color: #222222;
-  opacity: 0.5;
+  opacity: 1;
   transition: 0.5s;
 }
 
@@ -104,16 +211,92 @@ body {
   background-color: blanchedalmond;
   color: burlywood;
   text-shadow: 1px 1px 1px #222222;
-  opacity: 0.5;
+  opacity: 0.7;
   transition: 1s;
 }
 
 .dim {
   background: none;
   color: #111111;
+  opacity: 0.5;
 }
 
 .blackout {
   background-color: #111111;
   transition: 1s;
+}
+
+@media(hover: hover) and (pointer: fine) {
+
+  #login:hover,
+  #login:focus {
+    border-color: blanchedalmond;
+  }
+
+  #login:active { 
+    border-color: burlywood;
+    color: blanchedalmond;
+  }
+
+  #login-one:hover,
+  #login-two:hover {
+    color: blanchedalmond;
+    cursor: text;
+    opacity: 0.2;
+  }
+
+  #login-one:focus,
+  #login-two:focus {
+    color: #111111;
+    opacity: 0.7;
+  }
+
+  .btn-group-active {
+    background-color: burlywood;
+    color: #222222;
+  }
+  
+  .btn-group-inactive {
+    background: none;
+    color: burlywood;
+  }
+
+  .hover {
+    background-color: #111111;
+    opacity: 0.15;
+  }
+
+  .blink {
+    background-color: burlywood;
+    border-color: #222222;
+    color: #222222;
+    opacity: 1;
+    transition: 0.5s;
+  }
+  
+  .glow {
+    background-color: blanchedalmond;
+    color: burlywood;
+    text-shadow: 1px 1px 1px #222222;
+    opacity: 0.7;
+    transition: 1s;
+  }
+  
+  .dim {
+    background: none;
+    color: #111111;
+    opacity: 0.5;
+  }
+  
+  .blackout {
+    background-color: #111111;
+    transition: 1s;
+  }
+}
+
+@media(any-pointer: coarse) {
+  #one-player {
+    background-color: burlywood;
+    color: #222222;
+  }
 }
