--- a/style.css
+++ b/style.css
@@ -248,14 +248,16 @@ body {
   }
 
   #login-one:hover,
-  #login-two:hover {
+  #login-two:hover,
+  #you:hover {
     color: blanchedalmond;
     cursor: text;
     opacity: 0.2;
   }
 
   #login-one:focus,
-  #login-two:focus {
+  #login-two:focus,
+  #you:focus {
     color: #111111;
     opacity: 0.7;
   }
