--- a/style.css
+++ b/style.css
@@ -389,7 +389,7 @@ body {
   #you {
     height: 24vw;
     width: 100vw;
-    padding: 0 5vw;
+    /* padding: 0 5vw; */
     border-radius: 8.5vw 8.5vw 15vw 15vw;
     font-size: 10vw;
   }
