--- a/style.css
+++ b/style.css
@@ -374,6 +374,7 @@ body {
   
   #login {
     margin: 70vw auto 0 auto;
+    border-color: blanchedalmond;
   }
   
   #reset {
@@ -388,7 +389,7 @@ body {
   #login-two,
   #you {
     height: 24vw;
-    width: 100vw;
+    width: 95vw;
     /* padding: 0 5vw; */
     border-radius: 8.5vw 8.5vw 15vw 15vw;
     font-size: 10vw;
