DIY tie screen ASCII animation

--- a/style.css
+++ b/style.css
@@ -4,13 +4,17 @@
           box-sizing: border-box;
 }
 
+*:focus {
+  outline: none;
+}
+
 body {
   background-color: #222222;
   line-height: 1.5em;
 }
 
-*:focus {
-  outline: none;
+iframe {
+  border: none;
 }
 
 #container {
@@ -218,6 +222,23 @@ body {
   border-right: none;
 }
 
+#meow pre {
+  position: fixed;
+  top: 18%;
+  left: 50%;
+  width: 34vh;
+  height: 34vh;
+  margin: -17vh 0 0 -17vh;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1.3vh;
+  font-weight: bolder;
+  line-height: 2vh;
+}
+
+#meow pre:not(.meow) {
+  visibility: hidden;
+}
+
 .blink {
   background-color: burlywood;
   border-color: #222222;
@@ -243,6 +264,10 @@ body {
 .blackout {
   background-color: #111111;
   transition: 1s;
+}
+
+.meow {
+  visibility: visible;
 }
 
 @media(hover: hover) and (pointer: fine) {
