--- a/style.css
+++ b/style.css
@@ -450,7 +450,7 @@ iframe {
     height: 45vw;
     margin: -17vw 0 0 -17vw;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 12vw;
-    line-height: 14vw;
+    font-size: .25rem;
+    line-height: .35rem;
   }
 }
