--- a/style.css
+++ b/style.css
@@ -442,15 +442,15 @@ iframe {
     font-size: 24.25vw;
   }
 
-  /* #meow pre {
+  #meow pre {
     position: fixed;
-    top: 18.5%;
+    top: 15.5%;
     left: 50%;
     width: 36vw;
     height: 34vw;
     margin: -17vw 0 0 -18vw;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 4.5px;
-    line-height: 5.5px;
-  } */
+    font-size: 1.2vw;
+    line-height: 1.7vw;
+  }
 }
