--- a/style.css
+++ b/style.css
@@ -452,5 +452,6 @@ iframe {
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.2vw;
     line-height: 1.7vw;
+    zoom: 15%;
   }
 }
