--- a/style.css
+++ b/style.css
@@ -467,7 +467,7 @@ iframe {
     width: 100%;
     height: 100%;
     opacity: 0;
-    transition: 500ms;
+    transition: 10s;
   }
 
   #meow pre {
