--- a/style.css
+++ b/style.css
@@ -246,6 +246,14 @@ iframe {
                               center;
 }
 
+#horizon {
+  position: fixed;
+  top: 55.5vh;
+  width: 100%;
+  height: 700px;
+  background-color: #222222;
+}
+
 #meow pre {
   position: fixed;
   top: 42%;
