--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ iframe {
 
 #login-two { margin: 35vh auto 0 auto; }
 
-#you { margin: 22vh auto 0 auto }
+#you { margin: 35vh auto 0 auto }
 
 #message {
   position: fixed;
@@ -222,21 +222,14 @@ iframe {
   border-right: none;
 }
 
-/* #iframe-fix {
-  position: fixed;
-  width: 95vh;
-  height: 72vh;
-  margin: -17vh 0 0 -47.5vh;
-} */
-
-#thaddeus {
+#thaddeus, #robot {
   width: 100%;
   height: 100%;
   opacity: 0;
   transition: 10s;
 }
 
-#meow-body {
+#anim-body {
   background: radial-gradient(#111111,
                               #111111,
                               #222222,
@@ -254,19 +247,32 @@ iframe {
   background-color: #222222;
 }
 
-#meow pre {
+#meow pre,
+#computer pre {
   position: fixed;
-  top: 42%;
   left: 50%;
-  width: 74vh;
   height: 72vh;
-  margin: -36vh 0 0 -32vh;
   font-family: 'Courier New', Courier, monospace;
+}
+
+#meow pre {
+  top: 42%;
+  width: 74vh;
+  margin: -36vh 0 0 -32vh;
   font-size: 2.5vh;
   line-height: 2.9vh;
 }
 
-#meow pre:not(.meow) {
+#computer pre {
+  top: 40%;
+  width: 80vh;
+  margin: -36vh 0 0 -38vh;
+  font-size: 2.15vh;
+  line-height: 3.15vh;
+}
+
+#meow pre:not(.active),
+#computer pre:not(.active) {
   visibility: hidden;
 }
 
@@ -297,7 +303,7 @@ iframe {
   transition: 1s;
 }
 
-.meow {
+.active {
   visibility: visible;
 }
 
@@ -382,9 +388,6 @@ iframe {
     background: none;
     color: burlywood;
   }
-  #login {
-    
-  }
   #reset {
     background-color: burlywood;
     color: #222222;
@@ -463,7 +466,7 @@ iframe {
   
   #login-two { margin: 35vw auto 0 auto; }
   
-  #you { margin: 18vw auto 0 auto }
+  #you { margin: 35vw auto 0 auto }
   
    #message {
     margin: 20vw auto 0 auto;
@@ -477,27 +480,27 @@ iframe {
     font-size: 24.25vw;
   }
 
-  #thaddeus {
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: 10s;
-  }
-
   #horizon {
     position: fixed;
     top: 55.5vw;
   }
 
-  #meow pre {
-    position: fixed;
-    top: 40%;
-    left: 50%;
-    width: 74vw;
+  #meow pre,
+  #computer pre {
     height: 72vw;
+  }
+
+  #meow pre {
+    width: 74vw;
     margin: -36vw 0 0 -32vw;
-    font-family: 'Courier New', Courier, monospace;
     font-size: 2.5vw;
     line-height: 2.9vw;
+  }
+
+  #computer pre {
+    width: 80vw;
+    margin: -36vw 0 0 -38vw;
+    font-size: 2.3vw;
+    line-height: 3.3vw;
   }
 }
