--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ iframe {
 #horizon {
   position: fixed;
   top: 55.5vh;
-  width: 100%;
+  width: 95vh;
   height: 700px;
   background-color: #222222;
 }
@@ -483,6 +483,7 @@ iframe {
   #horizon {
     position: fixed;
     top: 55.5vw;
+    width: 95vw;
   }
 
   #meow pre,
