--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ iframe {
 #horizon {
   position: fixed;
   top: 55.5vh;
-  width: 95vh;
+  width: 100%;
   height: 700px;
   background-color: #222222;
 }
@@ -481,7 +481,7 @@ iframe {
   }
 
   #horizon {
-    width: 95vw;
+    width: 100%;
   }
 
   #anim-body {
