--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ iframe {
   margin: 0;
   padding: 0;
   background-color: #111111;
-  transition: 2s;
+  transition: 1.25s;
 }
 
 #container {
@@ -164,7 +164,29 @@ iframe {
 
 #login-two { margin: 35vh auto 0 auto; }
 
-#you { margin: 35vh auto 0 auto }
+#greeting {
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  width: 100vh;
+  height: 35vh;
+  margin: -17.5vh 0 0 -50vh;
+  padding: 12vh 4vh 12vh 4vh;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 6vh;
+  font-weight: bolder;
+  line-height: 6vh;
+  border-radius: 0 0 15vh 15vh;
+  background-color: #111111;
+  border: 8px dashed #222222;
+  border-top: none;
+  border-bottom: none;
+  text-align: center;
+  opacity: 0.4;
+  transition: 2s;
+}
+
+#you { margin: 40vh auto 0 auto }
 
 #message {
   position: fixed;
@@ -498,9 +520,19 @@ iframe {
   
   #login-two { margin: 35vw auto 0 auto; }
   
-  #you { margin: 35vw auto 0 auto }
+  #you { margin: 40vw auto 0 auto }
   
-   #message {
+  #greeting {
+    width: 100vw;
+    height: 35vw;
+    margin: -17.5vw 0 0 -50vw;
+    padding: 12vw 4vw 12vw 4vw;
+    font-size: 6vw;
+    line-height: 6vw;
+    border-radius: 0 0 15vw 15vw;
+  }
+
+  #message {
     margin: 32.5vw auto 0 auto;
     font-size: 7vw;
   }
