--- a/style.css
+++ b/style.css
@@ -523,9 +523,10 @@ iframe {
   #you { margin: 40vw auto 0 auto }
   
   #greeting {
+    top: 16vw;
     width: 100vw;
-    height: 35vh;
-    margin: -17.5vh 0 0 -50vw;
+    height: 35vw;
+    margin: -17.5vw 0 0 -50vw;
     padding: 14.5vw 4vw 14.5vw 4vw;
     font-size: 6vw;
     line-height: 6vw;
