--- a/style.css
+++ b/style.css
@@ -523,7 +523,7 @@ iframe {
   #you { margin: 40vw auto 0 auto }
   
   #greeting {
-    top: 16vw;
+    top: 20%;
     width: 100vw;
     height: 35vw;
     margin: -17.5vw 0 0 -50vw;
