--- a/style.css
+++ b/style.css
@@ -133,18 +133,21 @@ iframe {
 #login-one,
 #login-two,
 #you {
+  appearance: none;
   position: fixed;
   height: 24vh;
   width: 100vh;
   padding: 0 5vh;
   background: none;
-  border: none;
-  border-bottom: 3px dotted burlywood;
-  border-radius: 8.5vh 8.5vh 15vh 15vh;
+  border: 2vh double burlywood;
+  border-top: none;
+  border-bottom: none;
+  border-radius: 15vh;
   font-size: 10vh;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   text-align: center;
-  color: blanchedalmond;
+  color: burlywood;
+  box-shadow: 0 0 10vh #111111 inset;
   transition: 250ms;
 }
 
@@ -153,39 +156,39 @@ iframe {
 #you:focus {
   padding: 0;
   padding-left: 10vh;
-  border-bottom: 4px dotted #111111;
-  border-radius: 15vh 8vh;
+  color: blanchedalmond;
   text-align: left;
-  background-color: blanchedalmond;
-  color: #222222;
+  box-shadow: 0 0 10vh #111111 outset;
 }
 
-#login-one { margin: 5vh auto 0 auto; }
+#login-one { margin: 9.5vh auto 0 auto; }
 
-#login-two { margin: 35vh auto 0 auto; }
+#login-two { margin: 37.5vh auto 0 auto; }
 
 #greeting {
   position: fixed;
   width: 100vh;
   height: 24vh;
-  top: 20%;
+  top: 23.5%;
   left: 50%;
   margin: -12vh 0 0 -50vh;
-  padding: 8.5vh 4vh 8.5vh 4vh;
+  padding: 10vh 4vh 7vh 4vh;
   font-family: 'Courier New', Courier, monospace;
   font-size: 5.5vh;
-  font-weight: bolder;
+  font-weight: bold;
   line-height: 5.5vh;
-  border-radius: 15vh;
+  border: 4vh solid #111111;
+  border-top: none;
+  border-bottom: none;
+  border-radius: 7.75vh;
   background-color: #111111;
-  border: 1.5vh dashed #222222;
-  box-shadow: 0.5vh 1vh 5vh burlywood inset;
+  box-shadow: 0.5vh 1vh 10.25vh burlywood inset;
   text-align: center;
   cursor: default;
   transition: 2s;
 }
 
-#you { margin: 35vh auto 0 auto }
+#you { margin: 37.5vh auto 0 auto }
 
 #message {
   position: fixed;
@@ -395,7 +398,6 @@ iframe {
   #login-one:focus,
   #login-two:focus,
   #you:focus {
-    color: #111111;
     opacity: 0.7;
   }
 
@@ -504,34 +506,40 @@ iframe {
   #you {
     height: 24vw;
     width: 95vw;
-    border-radius: 8.5vw 8.5vw 15vw 15vw;
+    border: 2vw double burlywood;
+    border-top: none;
+    border-bottom: none;
+    border-radius: 15vw;
     font-size: 10vw;
+    box-shadow: 0 0 10vw #111111 inset;
   }
   
   #login-one:focus,
   #login-two:focus,
   #you:focus {
     padding-left: 10vw;
-    border-radius: 15vw 8vw;
+    box-shadow: 0 0 10vw #111111 outset;
   }
   
-  #login-one { margin: 5vw auto 0 auto; }
+  #login-one { margin: 9.5vw auto 0 auto; }
   
-  #login-two { margin: 35vw auto 0 auto; }
+  #login-two { margin: 37.5vw auto 0 auto; }
   
-  #you { margin: 35vw auto 0 auto }
+  #you { margin: 37.5vw auto 0 auto }
   
   #greeting {
     width: 100vw;
     height: 24vw;
-    top: 30%;
+    top: 33.5%;
     margin: -12vw 0 0 -50vw;
-    padding: 8.5vw 4vw 8.5vw 4vw;
+    padding: 10vw 4vw 7vw 4vw;
     font-size: 5.5vw;
     line-height: 5.5vw;
-    border: 1.5vw dashed #222222;
-    border-radius: 15vw;
-    box-shadow: 0.5vw 1vw 5vw burlywood inset;
+    border: 4vw solid #111111;
+    border-top: none;
+    border-bottom: none;
+    border-radius: 7.75vw;
+    box-shadow: 0.5vw 1vw 10.25vw burlywood inset;
   }
 
   #message {
