--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ iframe {
   width: 100vh;
   padding: 0 5vh;
   background: none;
-  border: 2vh double burlywood;
+  border: 4vh double burlywood;
   border-top: none;
   border-bottom: none;
   border-radius: 15vh;
@@ -148,7 +148,7 @@ iframe {
   text-align: center;
   color: burlywood;
   box-shadow: 0 0 10vh #111111 inset;
-  transition: 250ms;
+  transition: 125ms;
 }
 
 #login-one:focus,
@@ -158,6 +158,7 @@ iframe {
   padding-left: 10vh;
   color: blanchedalmond;
   text-align: left;
+  border-bottom: 0.5vh dashed burlywood;
   box-shadow: 0 0 10vh #111111 outset;
 }
 
@@ -177,11 +178,11 @@ iframe {
   font-size: 5.5vh;
   font-weight: bold;
   line-height: 5.5vh;
-  border: 4vh solid #111111;
+  border: 4vh double burlywood;
   border-top: none;
   border-bottom: none;
   border-radius: 7.75vh;
-  background-color: #111111;
+  background: none;
   box-shadow: 0.5vh 1vh 10.25vh burlywood inset;
   text-align: center;
   cursor: default;
@@ -518,6 +519,7 @@ iframe {
   #login-two:focus,
   #you:focus {
     padding-left: 10vw;
+    border-bottom: 0.5vw dashed burlywood;
     box-shadow: 0 0 10vw #111111 outset;
   }
   
@@ -535,7 +537,7 @@ iframe {
     padding: 10vw 4vw 7vw 4vw;
     font-size: 5.5vw;
     line-height: 5.5vw;
-    border: 4vw solid #111111;
+    border: 4vw double burlywood;
     border-top: none;
     border-bottom: none;
     border-radius: 7.75vw;
