--- a/style.css
+++ b/style.css
@@ -147,7 +147,8 @@ iframe {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   text-align: center;
   color: burlywood;
-  box-shadow: 0 0 10vh burlywood inset;
+  box-shadow: 0 0 10vh blanchedalmond inset;
+  opacity: 0.7;
   transition: 125ms;
 }
 
@@ -158,7 +159,7 @@ iframe {
   padding-left: 10vh;
   color: blanchedalmond;
   text-align: left;
-  border-bottom: 0.5vh dashed burlywood;
+  border-bottom: 0.5vh dashed blanchedalmond;
   box-shadow: 0 0 10vh #111111 inset;
 }
 
@@ -182,7 +183,7 @@ iframe {
   border-bottom: none;
   border-radius: 15vh;
   background: none;
-  box-shadow: 0.5vh 1vh 10.25vh burlywood inset;
+  box-shadow: 0.5vh 1vh 10.25vh blanchedalmond inset;
   text-align: center;
   cursor: default;
   transition: 2s;
@@ -511,7 +512,7 @@ iframe {
     border-bottom: none;
     border-radius: 15vw;
     font-size: 10vw;
-    box-shadow: 0 0 10vw burlywood inset;
+    box-shadow: 0 0 10vw blanchedalmond inset;
   }
   
   #login-one:focus,
@@ -540,7 +541,7 @@ iframe {
     border-top: none;
     border-bottom: none;
     border-radius: 15vw;
-    box-shadow: 0.5vw 1vw 10.25vw burlywood inset;
+    box-shadow: 0.5vw 1vw 10.25vw blanchedalmond inset;
   }
 
   #message {
