--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ iframe {
   height: 24vh;
   width: 100vh;
   padding: 0 5vh;
-  background: none;
+  background-color: #222222;
   border: 4vh double burlywood;
   border-top: none;
   border-bottom: none;
