webkit/moz appearance none on inputs

--- a/style.css
+++ b/style.css
@@ -134,6 +134,8 @@ iframe {
 #login-two,
 #you {
   appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   position: fixed;
   height: 24vh;
   width: 100vh;
