--- a/style.css
+++ b/style.css
@@ -595,7 +595,7 @@ iframe {
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: portrait) {
+@media screen and (orientation: landscape) {
   html {
     transform: rotate(-90deg);
     transform-origin: left top;
