--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ iframe {
   background: none;
   box-shadow: 0.5vh 1vh 10.25vh blanchedalmond inset;
   -webkit-box-shadow: 0.5vh 1vh 10.25vh blanchedalmond inset;
-  -moz-box-shadow: 0.5 1 10.25vh blanchedalmond inset;
+  -moz-box-shadow: 0.5vh 1vh 10.25vh blanchedalmond inset;
   text-align: center;
   cursor: default;
   transition: 2s;
@@ -202,13 +202,14 @@ iframe {
 #message {
   position: fixed;
   margin: 32.5vh auto 0 auto;
-  width: inherit;
-  height: inherit;
+  width: 100vh;
+  height: 5.75vh;
   background: none;
-  color: #222222;
+  color: blanchedalmond;
   font-size: 5.5vh;
   font-weight: bolder;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  opacity: 0.7;
   cursor: default;
   transition: 1.5s;
 }
@@ -574,7 +575,9 @@ iframe {
 
   #message {
     margin: 32.5vw auto 0 auto;
-    font-size: 5.5vw;
+    width: 100vw;
+    height: 5.75vw;
+    font-size: 5.5vw; 
   }
   
   [id^='cell-'] {
